test/self/self_at_top_level.lox
self // error: can't use 'self' outside of a structure
